Adicionada variáveis de manutenção referente a cada setor da página

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <script defer src="assets/vendor/fontawesome-5.15.4/js/all.min.js"></script>
     <script type="text/javascript" crossorigin="anonymous">
         $.getJSON("assets/globalVariables.json", function(globalVariables) {
-            if(globalVariables.isInMaintenance) {
+            if(globalVariables.homeIndexIsInMaintenance) {
                 $("body").load("maintenance");
             }
             else {
