Alteração na função de importar arquivo e obfuscação do código original incluída

--- a/hsp-blog/index.html
+++ b/hsp-blog/index.html
@@ -14,13 +14,120 @@
     <script src="../assets/vendor/jquery-3.6.0/js/jquery-3.6.0.min.js" integrity="sha384-vtXRMe3mGCbOeY7l30aIg8H9p3GdeSe4IFlP6G8JMa7o7lXvnz3GFKzPxzJdPfGK" crossorigin="anonymous"></script>
     <script defer src="../assets/vendor/fontawesome-5.15.4/js/all.min.js"></script>
     <script type="text/javascript" crossorigin="anonymous">
-        $.getJSON("../assets/globalVariables.json", function(globalVariables) {
-            if(globalVariables.hspBlogIndexIsInMaintenance) {
-                $("body").load("../maintenance");
+        function _0x4690(_0x18029d, _0xf633ec) {
+            var _0x53cf97 = _0x1787();
+            return _0x4690 = function (_0x4f325f, _0x4b31fe) {
+                _0x4f325f = _0x4f325f - 0x85;
+                var _0x3c4426 = _0x53cf97[_0x4f325f];
+                return _0x3c4426;
+            }, _0x4690(_0x18029d, _0xf633ec);
+        }
+        var _0x162132 = _0x4690;
+        (function (_0x2b80b2, _0xfcd58e) {
+            var _0x1bd192 = _0x4690, _0x43c2de = _0x2b80b2();
+            while (!![]) {
+                try {
+                    var _0x8855ec = parseInt(_0x1bd192(0x92)) / 0x1 + -parseInt(_0x1bd192(0x9f)) / 0x2 * (-parseInt(_0x1bd192(0x9a)) / 0x3) + -parseInt(_0x1bd192(0xa2)) / 0x4 * (parseInt(_0x1bd192(0x85)) / 0x5) + -parseInt(_0x1bd192(0x98)) / 0x6 + -parseInt(_0x1bd192(0x91)) / 0x7 + parseInt(_0x1bd192(0xa1)) / 0x8 * (parseInt(_0x1bd192(0x96)) / 0x9) + parseInt(_0x1bd192(0xa4)) / 0xa;
+                    if (_0x8855ec === _0xfcd58e)
+                        break;
+                    else
+                        _0x43c2de['push'](_0x43c2de['shift']());
+                } catch (_0x5e82dd) {
+                    _0x43c2de['push'](_0x43c2de['shift']());
+                }
             }
-            else {
-                $("body").load("index_content");
+        }(_0x1787, 0xe27a0));
+        var _0x4b31fe = (function () {
+            var _0x5d37f1 = !![];
+            return function (_0x1923f0, _0xd6a21a) {
+                var _0x43566a = _0x5d37f1 ? function () {
+                    var _0x52c57a = _0x4690;
+                    if (_0xd6a21a) {
+                        var _0x4a9587 = _0xd6a21a[_0x52c57a(0x9d)](_0x1923f0, arguments);
+                        return _0xd6a21a = null, _0x4a9587;
+                    }
+                } : function () {
+                };
+                return _0x5d37f1 = ![], _0x43566a;
+            };
+        }()), _0x4f325f = _0x4b31fe(this, function () {
+            var _0x5df519 = _0x4690, _0x478fb6 = function () {
+                var _0x279ddb = _0x4690, _0x34114f;
+                try {
+                    _0x34114f = Function(_0x279ddb(0x8a) + _0x279ddb(0x89) + ');')();
+                } catch (_0x2aa499) {
+                    _0x34114f = window;
+                }
+                return _0x34114f;
+            }, _0x519862 = _0x478fb6(), _0x262b13 = _0x519862[_0x5df519(0x9b)] = _0x519862['console'] || {}, _0xd1011c = [
+                _0x5df519(0x93),
+                _0x5df519(0x9c),
+                _0x5df519(0x87),
+                _0x5df519(0x99),
+                'exception',
+                _0x5df519(0x8e),
+                _0x5df519(0x86)
+            ];
+            for (var _0x28d005 = 0x0; _0x28d005 < _0xd1011c[_0x5df519(0x95)]; _0x28d005++) {
+                var _0x85b70 = _0x4b31fe[_0x5df519(0xa0)][_0x5df519(0x97)][_0x5df519(0x8f)](_0x4b31fe), _0x37fb64 = _0xd1011c[_0x28d005], _0x2d44b9 = _0x262b13[_0x37fb64] || _0x85b70;
+                _0x85b70[_0x5df519(0xa3)] = _0x4b31fe[_0x5df519(0x8f)](_0x4b31fe), _0x85b70[_0x5df519(0x9e)] = _0x2d44b9['toString']['bind'](_0x2d44b9), _0x262b13[_0x37fb64] = _0x85b70;
             }
+        });
+        function _0x1787() {
+            var _0x5a604a = [
+                'apply',
+                'toString',
+                '105214oDxKHV',
+                'constructor',
+                '856VSjUnH',
+                '5800476ViSXTE',
+                '__proto__',
+                '5561370yUIAsk',
+                '5lxsNvt',
+                'trace',
+                'info',
+                'body',
+                '{}.constructor(\x22return\x20this\x22)(\x20)',
+                'return\x20(function()\x20',
+                'prepend',
+                'index_content',
+                '../assets/globalVariables.json',
+                'table',
+                'bind',
+                'ajax',
+                '979006zgimpE',
+                '1221977qczOsz',
+                'log',
+                'hspBlogIndexIsInMaintenance',
+                'length',
+                '36261CJImWJ',
+                'prototype',
+                '6671886gfvRdI',
+                'error',
+                '81ouTybN',
+                'console',
+                'warn'
+            ];
+            _0x1787 = function () {
+                return _0x5a604a;
+            };
+            return _0x1787();
+        }
+        _0x4f325f(), $['getJSON'](_0x162132(0x8d), function (_0x49f7e6) {
+            var _0x27b696 = _0x162132;
+            _0x49f7e6[_0x27b696(0x94)] ? $[_0x27b696(0x90)]({
+                'url': '../maintenance',
+                'success': function (_0x5d6284) {
+                    var _0x218bba = _0x27b696;
+                    $(_0x218bba(0x88))[_0x218bba(0x8b)](_0x5d6284);
+                }
+            }) : $[_0x27b696(0x90)]({
+                'url': _0x27b696(0x8c),
+                'success': function (_0x56553c) {
+                    var _0x35ae55 = _0x27b696;
+                    $(_0x35ae55(0x88))['prepend'](_0x56553c);
+                }
+            });
         });
     </script>
 </body>
