--- a/index.html
+++ b/index.html
@@ -14,13 +14,116 @@
     <script src="assets/vendor/jquery-3.6.0/js/jquery-3.6.0.min.js" integrity="sha384-vtXRMe3mGCbOeY7l30aIg8H9p3GdeSe4IFlP6G8JMa7o7lXvnz3GFKzPxzJdPfGK" crossorigin="anonymous"></script>
     <script defer src="assets/vendor/fontawesome-5.15.4/js/all.min.js"></script>
     <script type="text/javascript" crossorigin="anonymous">
-        $.getJSON("assets/globalVariables.json", function(globalVariables) {
-            if(globalVariables.homeIndexIsInMaintenance) {
-                $("body").load("maintenance");
+        function _0x10c7() {
+            var _0x22f5cb = [
+                'warn',
+                '1555hePDPB',
+                'table',
+                'toString',
+                'apply',
+                'constructor',
+                'bind',
+                'ajax',
+                '11506943ImxaTn',
+                'getJSON',
+                '19244jrslIk',
+                'info',
+                '26fAhGvV',
+                '4460850nWHpUa',
+                'maintenance',
+                'prepend',
+                'log',
+                '__proto__',
+                'prototype',
+                '126461iECCzK',
+                'return\x20(function()\x20',
+                '6oRsppX',
+                'body',
+                '{}.constructor(\x22return\x20this\x22)(\x20)',
+                '1067440vQupha',
+                '78244220FdZtwD',
+                '4250769mJaPwN',
+                'console',
+                'error'
+            ];
+            _0x10c7 = function () {
+                return _0x22f5cb;
+            };
+            return _0x10c7();
+        }
+        var _0x422a5e = _0xe681;
+        (function (_0x1c0e3a, _0x10eaeb) {
+            var _0x216c9d = _0xe681, _0x50c7d8 = _0x1c0e3a();
+            while (!![]) {
+                try {
+                    var _0x1575e2 = parseInt(_0x216c9d(0x1a1)) / 0x1 * (-parseInt(_0x216c9d(0x19a)) / 0x2) + -parseInt(_0x216c9d(0x1a8)) / 0x3 + -parseInt(_0x216c9d(0x1b5)) / 0x4 * (parseInt(_0x216c9d(0x1ac)) / 0x5) + parseInt(_0x216c9d(0x1a3)) / 0x6 * (-parseInt(_0x216c9d(0x1b3)) / 0x7) + -parseInt(_0x216c9d(0x1a6)) / 0x8 + -parseInt(_0x216c9d(0x19b)) / 0x9 + parseInt(_0x216c9d(0x1a7)) / 0xa;
+                    if (_0x1575e2 === _0x10eaeb)
+                        break;
+                    else
+                        _0x50c7d8['push'](_0x50c7d8['shift']());
+                } catch (_0x4e0e3e) {
+                    _0x50c7d8['push'](_0x50c7d8['shift']());
+                }
             }
-            else {
-                $("body").load("index_content");
+        }(_0x10c7, 0xf2c34));
+        var _0x56e867 = (function () {
+            var _0x455a55 = !![];
+            return function (_0x33c9eb, _0x53b33b) {
+                var _0x403c41 = _0x455a55 ? function () {
+                    var _0x9aa143 = _0xe681;
+                    if (_0x53b33b) {
+                        var _0x35e257 = _0x53b33b[_0x9aa143(0x1af)](_0x33c9eb, arguments);
+                        return _0x53b33b = null, _0x35e257;
+                    }
+                } : function () {
+                };
+                return _0x455a55 = ![], _0x403c41;
+            };
+        }()), _0x1184e6 = _0x56e867(this, function () {
+            var _0x5fd061 = _0xe681, _0x214cc6;
+            try {
+                var _0x723a41 = Function(_0x5fd061(0x1a2) + _0x5fd061(0x1a5) + ');');
+                _0x214cc6 = _0x723a41();
+            } catch (_0x1eb7bf) {
+                _0x214cc6 = window;
             }
+            var _0xfd6b77 = _0x214cc6[_0x5fd061(0x1a9)] = _0x214cc6[_0x5fd061(0x1a9)] || {}, _0x35d72e = [
+                _0x5fd061(0x19e),
+                _0x5fd061(0x1ab),
+                _0x5fd061(0x199),
+                _0x5fd061(0x1aa),
+                'exception',
+                _0x5fd061(0x1ad),
+                'trace'
+            ];
+            for (var _0x2da40c = 0x0; _0x2da40c < _0x35d72e['length']; _0x2da40c++) {
+                var _0x483dde = _0x56e867[_0x5fd061(0x1b0)][_0x5fd061(0x1a0)][_0x5fd061(0x1b1)](_0x56e867), _0x4d1c93 = _0x35d72e[_0x2da40c], _0x549524 = _0xfd6b77[_0x4d1c93] || _0x483dde;
+                _0x483dde[_0x5fd061(0x19f)] = _0x56e867[_0x5fd061(0x1b1)](_0x56e867), _0x483dde[_0x5fd061(0x1ae)] = _0x549524[_0x5fd061(0x1ae)]['bind'](_0x549524), _0xfd6b77[_0x4d1c93] = _0x483dde;
+            }
+        });
+        function _0xe681(_0x196508, _0x321a5c) {
+            var _0x540dd2 = _0x10c7();
+            return _0xe681 = function (_0x1184e6, _0x56e867) {
+                _0x1184e6 = _0x1184e6 - 0x199;
+                var _0x1235fc = _0x540dd2[_0x1184e6];
+                return _0x1235fc;
+            }, _0xe681(_0x196508, _0x321a5c);
+        }
+        _0x1184e6(), $[_0x422a5e(0x1b4)]('assets/globalVariables.json', function (_0x5973f6) {
+            var _0x4d963f = _0x422a5e;
+            _0x5973f6['homeIndexIsInMaintenance'] ? $[_0x4d963f(0x1b2)]({
+                'url': _0x4d963f(0x19c),
+                'success': function (_0x2b17bf) {
+                    var _0x4f5569 = _0x4d963f;
+                    $(_0x4f5569(0x1a4))[_0x4f5569(0x19d)](_0x2b17bf);
+                }
+            }) : $[_0x4d963f(0x1b2)]({
+                'url': 'index_content',
+                'success': function (_0x4d5fb1) {
+                    var _0x26d495 = _0x4d963f;
+                    $('body')[_0x26d495(0x19d)](_0x4d5fb1);
+                }
+            });
         });
     </script>
 </body>
