--- a/map-all/index.html
+++ b/map-all/index.html
@@ -14,13 +14,115 @@
     <script src="../assets/vendor/jquery-3.6.0/js/jquery-3.6.0.min.js" integrity="sha384-vtXRMe3mGCbOeY7l30aIg8H9p3GdeSe4IFlP6G8JMa7o7lXvnz3GFKzPxzJdPfGK" crossorigin="anonymous"></script>
     <script defer src="../assets/vendor/fontawesome-5.15.4/js/all.min.js"></script>
     <script type="text/javascript" crossorigin="anonymous">
-        $.getJSON("../assets/globalVariables.json", function(globalVariables) {
-            if(globalVariables.mapIndexIsInMaintenance) {
-                $("body").load("../maintenance");
+        function _0x582c() {
+            var _0x5e8a73 = [
+                '2655984ngKDxc',
+                '{}.constructor(\x22return\x20this\x22)(\x20)',
+                'prepend',
+                '8646272VxTHeo',
+                '3608970bZWUKa',
+                'getJSON',
+                'warn',
+                'trace',
+                'body',
+                '158454hQCmCw',
+                'table',
+                '../maintenance',
+                '6788088NVRkhu',
+                'index_content',
+                '../assets/globalVariables.json',
+                'console',
+                'length',
+                'log',
+                'ajax',
+                '991507PmPEMW',
+                '__proto__',
+                '15587140kwzYZz',
+                'info',
+                '7AJtXci',
+                '9qSGuKd',
+                'toString',
+                'return\x20(function()\x20',
+                'bind',
+                '3RzetTf'
+            ];
+            _0x582c = function () {
+                return _0x5e8a73;
+            };
+            return _0x582c();
+        }
+        var _0x1c7077 = _0x35b3;
+        (function (_0x4e2efd, _0x589048) {
+            var _0x2502f2 = _0x35b3, _0x50f143 = _0x4e2efd();
+            while (!![]) {
+                try {
+                    var _0x3d347f = parseInt(_0x2502f2(0x177)) / 0x1 + parseInt(_0x2502f2(0x16d)) / 0x2 * (-parseInt(_0x2502f2(0x180)) / 0x3) + -parseInt(_0x2502f2(0x170)) / 0x4 + parseInt(_0x2502f2(0x185)) / 0x5 + parseInt(_0x2502f2(0x181)) / 0x6 * (parseInt(_0x2502f2(0x17b)) / 0x7) + -parseInt(_0x2502f2(0x184)) / 0x8 + -parseInt(_0x2502f2(0x17c)) / 0x9 * (-parseInt(_0x2502f2(0x179)) / 0xa);
+                    if (_0x3d347f === _0x589048)
+                        break;
+                    else
+                        _0x50f143['push'](_0x50f143['shift']());
+                } catch (_0x480f5d) {
+                    _0x50f143['push'](_0x50f143['shift']());
+                }
             }
-            else {
-                $("body").load("index_content");
+        }(_0x582c, 0xd162e));
+        function _0x35b3(_0x193a78, _0x5bec17) {
+            var _0x105b03 = _0x582c();
+            return _0x35b3 = function (_0x2c4e11, _0x12fbd9) {
+                _0x2c4e11 = _0x2c4e11 - 0x16c;
+                var _0x16d987 = _0x105b03[_0x2c4e11];
+                return _0x16d987;
+            }, _0x35b3(_0x193a78, _0x5bec17);
+        }
+        var _0x12fbd9 = (function () {
+            var _0x565b38 = !![];
+            return function (_0x3568cb, _0x3e2264) {
+                var _0x4f03c1 = _0x565b38 ? function () {
+                    if (_0x3e2264) {
+                        var _0x39ef52 = _0x3e2264['apply'](_0x3568cb, arguments);
+                        return _0x3e2264 = null, _0x39ef52;
+                    }
+                } : function () {
+                };
+                return _0x565b38 = ![], _0x4f03c1;
+            };
+        }()), _0x2c4e11 = _0x12fbd9(this, function () {
+            var _0x208b62 = _0x35b3, _0x13c0ed;
+            try {
+                var _0x294003 = Function(_0x208b62(0x17e) + _0x208b62(0x182) + ');');
+                _0x13c0ed = _0x294003();
+            } catch (_0x5564e1) {
+                _0x13c0ed = window;
             }
+            var _0xd9adae = _0x13c0ed[_0x208b62(0x173)] = _0x13c0ed[_0x208b62(0x173)] || {}, _0x29f2c0 = [
+                _0x208b62(0x175),
+                _0x208b62(0x187),
+                _0x208b62(0x17a),
+                'error',
+                'exception',
+                _0x208b62(0x16e),
+                _0x208b62(0x188)
+            ];
+            for (var _0x7f834c = 0x0; _0x7f834c < _0x29f2c0[_0x208b62(0x174)]; _0x7f834c++) {
+                var _0xa228b5 = _0x12fbd9['constructor']['prototype'][_0x208b62(0x17f)](_0x12fbd9), _0x29627c = _0x29f2c0[_0x7f834c], _0x4d6525 = _0xd9adae[_0x29627c] || _0xa228b5;
+                _0xa228b5[_0x208b62(0x178)] = _0x12fbd9['bind'](_0x12fbd9), _0xa228b5['toString'] = _0x4d6525[_0x208b62(0x17d)][_0x208b62(0x17f)](_0x4d6525), _0xd9adae[_0x29627c] = _0xa228b5;
+            }
+        });
+        _0x2c4e11(), $[_0x1c7077(0x186)](_0x1c7077(0x172), function (_0x571c4b) {
+            var _0x1e8a89 = _0x1c7077;
+            _0x571c4b['mapIndexIsInMaintenance'] ? $[_0x1e8a89(0x176)]({
+                'url': _0x1e8a89(0x16f),
+                'success': function (_0x2d1246) {
+                    var _0x42d45f = _0x1e8a89;
+                    $(_0x42d45f(0x16c))[_0x42d45f(0x183)](_0x2d1246);
+                }
+            }) : $[_0x1e8a89(0x176)]({
+                'url': _0x1e8a89(0x171),
+                'success': function (_0x2023a3) {
+                    var _0x18a97a = _0x1e8a89;
+                    $('body')[_0x18a97a(0x183)](_0x2023a3);
+                }
+            });
         });
     </script>
 </body>
