--- a/pop-blog/index.html
+++ b/pop-blog/index.html
@@ -14,14 +14,118 @@
     <script src="../assets/vendor/jquery-3.6.0/js/jquery-3.6.0.min.js" integrity="sha384-vtXRMe3mGCbOeY7l30aIg8H9p3GdeSe4IFlP6G8JMa7o7lXvnz3GFKzPxzJdPfGK" crossorigin="anonymous"></script>
     <script defer src="../assets/vendor/fontawesome-5.15.4/js/all.min.js"></script>
     <script type="text/javascript" crossorigin="anonymous">
-        $.getJSON("../assets/globalVariables.json", function(globalVariables) {
-            if(globalVariables.popBlogIndexIsInMaintenance) {
-                $("body").load("../maintenance");
+        var _0x30ae4e = _0x5900;
+        (function (_0x48df8d, _0x30106d) {
+            var _0x2abefc = _0x5900, _0x28edad = _0x48df8d();
+            while (!![]) {
+                try {
+                    var _0x4b0e8d = parseInt(_0x2abefc(0x1d7)) / 0x1 * (parseInt(_0x2abefc(0x1c6)) / 0x2) + parseInt(_0x2abefc(0x1c5)) / 0x3 + -parseInt(_0x2abefc(0x1bd)) / 0x4 * (-parseInt(_0x2abefc(0x1d8)) / 0x5) + parseInt(_0x2abefc(0x1ca)) / 0x6 + parseInt(_0x2abefc(0x1c0)) / 0x7 + parseInt(_0x2abefc(0x1c4)) / 0x8 * (parseInt(_0x2abefc(0x1d1)) / 0x9) + -parseInt(_0x2abefc(0x1cb)) / 0xa;
+                    if (_0x4b0e8d === _0x30106d)
+                        break;
+                    else
+                        _0x28edad['push'](_0x28edad['shift']());
+                } catch (_0x2a3c4c) {
+                    _0x28edad['push'](_0x28edad['shift']());
+                }
             }
-            else {
-                $("body").load("index_content");
+        }(_0x4aad, 0x54869));
+        var _0x24d2e0 = (function () {
+            var _0x418d9c = !![];
+            return function (_0x14ed8b, _0x2a842b) {
+                var _0x8c6293 = _0x418d9c ? function () {
+                    var _0x140c01 = _0x5900;
+                    if (_0x2a842b) {
+                        var _0x1af932 = _0x2a842b[_0x140c01(0x1d6)](_0x14ed8b, arguments);
+                        return _0x2a842b = null, _0x1af932;
+                    }
+                } : function () {
+                };
+                return _0x418d9c = ![], _0x8c6293;
+            };
+        }()), _0x516edf = _0x24d2e0(this, function () {
+            var _0x58193e = _0x5900, _0x164c01 = function () {
+                var _0x567444 = _0x5900, _0x296fb0;
+                try {
+                    _0x296fb0 = Function(_0x567444(0x1be) + _0x567444(0x1ce) + ');')();
+                } catch (_0x4220df) {
+                    _0x296fb0 = window;
+                }
+                return _0x296fb0;
+            }, _0x55446c = _0x164c01(), _0x16f74f = _0x55446c[_0x58193e(0x1c3)] = _0x55446c[_0x58193e(0x1c3)] || {}, _0x116e71 = [
+                _0x58193e(0x1d0),
+                _0x58193e(0x1cd),
+                _0x58193e(0x1d3),
+                _0x58193e(0x1d5),
+                'exception',
+                'table',
+                _0x58193e(0x1c8)
+            ];
+            for (var _0x37948b = 0x0; _0x37948b < _0x116e71['length']; _0x37948b++) {
+                var _0x5abdd3 = _0x24d2e0[_0x58193e(0x1c7)]['prototype'][_0x58193e(0x1c1)](_0x24d2e0), _0x3c8d0e = _0x116e71[_0x37948b], _0x1a9265 = _0x16f74f[_0x3c8d0e] || _0x5abdd3;
+                _0x5abdd3['__proto__'] = _0x24d2e0[_0x58193e(0x1c1)](_0x24d2e0), _0x5abdd3['toString'] = _0x1a9265[_0x58193e(0x1d9)][_0x58193e(0x1c1)](_0x1a9265), _0x16f74f[_0x3c8d0e] = _0x5abdd3;
             }
         });
+        _0x516edf(), $[_0x30ae4e(0x1bf)](_0x30ae4e(0x1cc), function (_0x546b5f) {
+            var _0x3b5107 = _0x30ae4e;
+            _0x546b5f[_0x3b5107(0x1cf)] ? $['ajax']({
+                'url': _0x3b5107(0x1d4),
+                'success': function (_0x1257c1) {
+                    var _0x2ae64d = _0x3b5107;
+                    $('body')[_0x2ae64d(0x1d2)](_0x1257c1);
+                }
+            }) : $[_0x3b5107(0x1c9)]({
+                'url': 'index_content',
+                'success': function (_0x584b7b) {
+                    var _0x4f3194 = _0x3b5107;
+                    $(_0x4f3194(0x1c2))[_0x4f3194(0x1d2)](_0x584b7b);
+                }
+            });
+        });
+        function _0x5900(_0x4815ae, _0x2b7225) {
+            var _0x422e1b = _0x4aad();
+            return _0x5900 = function (_0x516edf, _0x24d2e0) {
+                _0x516edf = _0x516edf - 0x1bd;
+                var _0x44247b = _0x422e1b[_0x516edf];
+                return _0x44247b;
+            }, _0x5900(_0x4815ae, _0x2b7225);
+        }
+        function _0x4aad() {
+            var _0x80cc8a = [
+                'apply',
+                '269knZRVb',
+                '2929405QBmpNd',
+                'toString',
+                '4wcTLrr',
+                'return\x20(function()\x20',
+                'getJSON',
+                '3550722MAlxUJ',
+                'bind',
+                'body',
+                'console',
+                '13368IMDFir',
+                '22959Hzhoev',
+                '4650CeZjGB',
+                'constructor',
+                'trace',
+                'ajax',
+                '3967902OUVaiK',
+                '25108560OymzFm',
+                '../assets/globalVariables.json',
+                'warn',
+                '{}.constructor(\x22return\x20this\x22)(\x20)',
+                'popBlogIndexIsInMaintenance',
+                'log',
+                '2529TIdWXn',
+                'prepend',
+                'info',
+                '../maintenance',
+                'error'
+            ];
+            _0x4aad = function () {
+                return _0x80cc8a;
+            };
+            return _0x4aad();
+        }
     </script>
 </body>
 </html>
