--- a/map-all/index.html
+++ b/map-all/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="google-site-verification" content="oL4MxYP2fowyLzvCkMY7M8c4MrjlN0uNjd3dbLpegJg" />
     <title>PQPMath3ws | Carregando...</title>
     <link href="../assets/vendor/bootstrap-5.1.3/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="../assets/css/initial.css" crossorigin="anonymous" />
