--- a/public/index.html
+++ b/public/index.html
@@ -2,12 +2,11 @@
 <html lang="pt-BR">
   <head>
     <meta charset="utf-8" />
-    <!--<link rel="icon" href="%PUBLIC_URL%/favicon.ico" />-->
+    <link rel="shortcut icon" href="" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="google-site-verification" content="oL4MxYP2fowyLzvCkMY7M8c4MrjlN0uNjd3dbLpegJg" />
-    <meta name="description" content="Porfólio Pessoal & Portal Gratuito de Informações sobre Hacking & Segurança Digital, Programação, Produção Musical e afins." />
-    <!--<link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />-->
+    <meta name="description" content="Porfólio Pessoal & Portal Gratuito de Informações sobre Hacking & Segurança Digital, Programação, Produção Musical e o que mais EU dominar hahaha." />
+    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>PQPMath3ws | Página Inicial</title>
   </head>
   <body>
