--- a/public/index.html
+++ b/public/index.html
@@ -12,5 +12,6 @@
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8602603636850934" crossorigin="anonymous"></script>
   </body>
 </html>
